--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
